updated game reviews

--- a/_posts/GAMES/2022-07-27-doom-2016-review.md
+++ b/_posts/GAMES/2022-07-27-doom-2016-review.md
@@ -3,7 +3,7 @@ layout: post
 title: "Review: Doom (2016)"
 date: 2022-07-27 22:51 +0100
 tags: review doom
-categories: [Reviews, Doom]
+categories: [Reviews, Games]
 published: true
 ---
 
