finished and published automata writeup

--- a/_posts/Projects/2022-10-08-automata.md
+++ b/_posts/Projects/2022-10-08-automata.md
@@ -4,7 +4,7 @@ title: "Projects: Automata"
 date: 2022-10-08
 tags: bash automation pentesting nmap
 categories: [Projects, Automation]
-published: false
+published: true
 ---
 
 Automata is a tool I wrote to help me be more organized during my pentesting.
@@ -15,20 +15,153 @@ It started as a basic wrapper that I wrote around `nmap` because I was doing a l
 
 Then at some point I discovered ANSI escape codes for generating colours within a terminal and it evolved into it's current iteration, which is likely where it's journey ends because if I add any more functionality to it I might as well start writing my own version of `nmap` and I'll be stepping a bit too far into the realms of feature creep.
 
-So what does `automata` do?
+The one feature that I'm debating on adding is the ability to scan multiple targets, right now it's limited to scanning a single target, making it do more than one probably requires a complete redesign so that's very much on the TODO list.
+
+So what does `automata` actually do?
 
 In a nutshell; it scans a given target using `nmap`, creates a set of directories, and generates a report template based on the `nmap` results.
 
-It's default scanning mode is a two part scan:
+## Usage
+
+Clone the repo or download the zip archive (doesn't really matter):
+
+```bash
+git clone https://github.com/bull-sec/automata.git
+```
+
+Make the script executable:
+
+```bash
+cd automata/
+chmod +x automata.sh
+```
+
+Change `AUTOMATA_PATH` (line 19) to wherever you've save `automata` to, save it, and you're good to go. Or if you don't like modifying scripts, make a directory called Tools in your home directory and clone `automata` there.
+
+Once you're set up, just run the script:
+
+```bash
+./automata.sh
+```
+
+And you should be greeted by the logo/target input screen.
+
+![Target Input/Logo Screen](/assets/img/2022-10-09-22-47-09.png)
+
+You can select the options from the menu in what I'm very generously calling the "GUI".
+
+!["GUI" Menu](/assets/img/2022-10-09-22-47-52.png)
+
+## Running a Scan
+
+Really simple.
+
+Give it an IP address then hit 2, or 3.
+
+Option #2 lets you enter a custom nmap scan configuration.
+
+Option #3 runs the default two-phase scan.
+
+Both the "Custom Nmap Scan" and "Full Nmap Scans" perform the full directory and note template creation loop when ran, or you can run the directory and note template creation functions on their own from the menu.
+
+## Create Directories
+
+One of the first things `automata` does when you run a scan is create a few directories.
+
+```bash
+.
+├── credentials.txt
+├── nmap_results
+├── Notes.md
+├── screenshots
+├── target.txt
+└── www
+```
+
+`nmap_results` is where the scan outputs are dumped (in nmap format) `screenshots` is where you should store any screenshots, and `www` is where I would copy scripts and payloads into and run my SMB/HTTP servers from there for infil/exfil. These are based on directories I found myself creating over and over again anyway, so might as well automate the process.
+
+## Scanning
+
+The default scanning mode is a two part scan:
 
 ```bash
 # First pass, scan ALL ports
-nmap <target> -p- -Pn -vvv -n -oN <target-directory>
+nmap <target> --privileged -p- -Pn -vvv -n -oN <target-directory>
 
 # Second pass, scan DISCOVERED ports
-nmap <target> -p <ports-from-first-pass> -Pn -vvv -sV -sC -oN <target-directory>
+nmap <target> --privileged -p <ports-from-first-pass> -Pn -vvv -sV -sC -oN <target-directory>
 ```
 
-> It's recommended to follow the tutorial linked below to make sure that you can run `nmap` without sudo or root
+I've found that this scanning method does a pretty good job to the point that I used `automata` on my OSCP and had no issues, and the OSCP labs have been known to throw spanners in your scanning endeavours.
+
+> Due to the inclusion of the `--privileged` flag I recommend followin the tutorial linked below to make sure that you can run `nmap` without sudo or root (instructions are included at the top of the `automata.sh` script as well)
+{: .prompt-info }
 
 [Run Nmap without Sudo or Root](https://www.maketecheasier.com/run-nmap-without-root-or-sudo/)
+
+"Custom Nmap Scan" gives you an input field to manually enter your custom `nmap` flags. Bear in mind you only need the flags, and the output flag is already set. This will mean that you're only doing a one-phase scan, but if you're selecting this option I'm just going to assume that you know what you're doing.
+
+The "Custom Nmap Scan" can be good for troubleshooting if you're having issues with the default scan.
+
+With both scans the output is printed out to the screen so you can monitor it in real time, I've often found that as soon as say port 80 pops up I'll just run straight off and check it out in a browser while I wait for the rest of the scan to finish.
+
+## Read Nmap results
+
+One of the simpler functions.
+
+It dumps the entire contents of your `nmap` scans onto the terminal using `less` as a pager and then lets you drop nicely back into the `automata` menu. The idea was that you don't have to leave `automata` to get all the information that was generated during a scan.
+
+## Summary View
+
+This was basically me taking the piss with ANSI escape characters but it's actually pretty useful. It'll flag up common things like http, ftp, ssh, various sql databases, and tells you how many services were scanned in total.
+
+![Summary View](/assets/img/2022-10-09-23-31-31.png)
+
+Above is a scan I did of my laptop while I was writing this piece, as you can see it's a pretty basic output, and quite clearly states that it's just a summary and the full results should be read (that warning is specifically designed to catch my attention)
+
+Feel free to ignore it, but I like it as an "at a glance" sort of thing, and you can trigger it again from the menu.
+
+## Dump File Tree
+
+Quite proud of this one, it's super hacky because I realised that not everyone will have `tree` installed, so it uses a cool bit of bash magic to generate the following (based on a single scan of my laptop)
+
+```bash
+.
+├─www
+├─screenshots
+├─credentials.txt
+├─target.txt
+├─Notes.md
+├─nmap_results
+├───all_ports_127.0.0.1
+├───port_list_127.0.0.1
+└───targetted_scan_127.0.0.1.nmap
+```
+
+It's piped to `less` the same as the `nmap` results so you don't have to leave the application.
+
+This is another "at a glance" thing that you can completely ignore if you choose to. It's mostly useful when you come back to a box after a few days off or you look at a box you did when you were drunk, just to see what's what.
+
+## Create Notes Template
+
+Not sure why I included this as a separate option as it's mostly useless without the `nmap` results and it'll throw an error at you, but it works, if you just wanted to output a blank template for some reason. Enjoy.
+
+![Example of a Blank Template](/assets/img/2022-10-09-22-51-37.png)
+
+The actual function when is ran when you select option 3.
+
+## Persistence (ish)
+
+`automata` is persistent, kinda.
+
+You can re-run the `automata` script in a directory you've previously ran it in and it'll pick up the directories and files and as long as none of the names have deviated from what it's expecting then it'll work just fine.
+
+## Conclusion
+
+I like it.
+
+I'm pretty biased because I made it, but still.
+
+If you do end up using it then drop me a Star on GitHub or a shoutout on Twitter, it's all appreciated :)
+
+/MB
